Update to java21 (#679)
* Fix merge conflicts

* Fix bug... should always be serialized

* Disable tests

* Add test case for parsing JSON alone via GSON

* Disable test and add stopwatch

* Add message...

* Add disabled annotation...

* Intermediate commit/push... issue with parallelization

* Fixes issue due to parallelization

* Revert changes

* Fix compile error

* Recycle bytes instance

* Update gradle.yml

* Update Chronicle Bytes and switch Kotlin compile jvmTarget

* Switch Kotlin compile jvmTarget

* Add GC logs

* Add G1 GC logs

* Add most recent changes

* Disable test

* Update chronicle bytes

* Update settings.gradle

* Update settings.gradle

* Minor changes...

* Update Java version in github workflow